--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,75 +30,6 @@
     </h4>
   </div>
 
-  <!-- <div class="container" style="justify-content: center;
-  display: flex;">
-
-  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" style="padding :50px">
-   
-    <mdb-carousel-item style="min-width: 50%; min-height: 350px;">
-  <div class="card" id="card-mintDevilCat">
-    <div class="container">
-      <div class="card-body">
-        <p >FruitTownGremlins.WTFruit<p>
-
-        <img id="center-img-gif" src="../../../assets/toonverse/fruitgremlins.wtf/ftgbanner.png" alt="logo" height="40%" width="63%"
-          style="border-radius: 5%" />
-        <br>
-        <br>
-        <p> A fruity gremlin derivative with a twist.</p>
-
-        <button id="navbar-text" class="styled">Go To Dashboard.</button>
-
-      </div>
-    </div>
-  </div>
-    </mdb-carousel-item>
-
-    <mdb-carousel-item style="min-width: 50%; min-height: 350px;">
-      <div class="card" id="card-mintDevilCat">
-        <div class="container">
-          <div class="card-body">
-            <p>CrazyCloudClub.WtFluff<p>
-    
-            <img id="center-img-gif" src="../../../assets/toonverse/clouds/Music.png" alt="logo" height="40%" width="63%"
-              style="border-radius: 5%" />
-            <br>
-            <br>
-            <p> These crazy cloud are sure not to rain on your parade.</p>
-    
-            <button id="navbar-text" class="styled">Coming Soon.</button>
-    
-          </div>
-        </div>
-      </div>
-    </mdb-carousel-item>
-
-    <mdb-carousel-item style="min-width: 50%; min-height: 350px;"> 
-      <div class="card" id="card-mintDevilCat">
-        <div class="container">
-          <div class="card-body">
-            <p>TangGang.OGT</p>
-    
-            <img id="center-img-gif" src="../../../assets/toonverse/fruitgremlins.wtf/ftgbanner.png" alt="logo" height="40%" width="63%"
-              style="border-radius: 5%" />
-            <br>
-            <br>
-            <p> Animated Orangutangs with an urban twist.</p>
-    
-            <button id="navbar-text" class="styled">Coming Soon.</button>
-    
-          </div>
-        </div>
-      </div>
-
-    </mdb-carousel-item>
- 
-  </mdb-carousel>
-
-  </div>
-   -->
-
-
   <div class="card" id="card-mintDevilCat">
     <div class="container">
       <div class="card-body">
@@ -163,6 +94,7 @@
           <p>COMING SOON</p>
           <p> Fruit Town Gremlins
           </p>
+          <h3>Sold Out</h3>
           <br>
           <p>Free mint only available to DevilCatz Holders.</p>
           <br>
@@ -179,6 +111,7 @@
           <br>
           <p>COMING SOON</p>
           <p>Cloudy Frens</p>
+          <h3>Coming Soon</h3>
           <br>
 
           <p>Free mint only available to DevilCatz Holders.</p>
@@ -203,7 +136,7 @@
 
       The creators and maintainers of Toonverse Studios are not liable for any loss when trading
       cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
-      advise,
+      advice,
       investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
       any
       of
