Font, images, marketplace, color, removed old projects.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,36 @@
-<div class="center-div" style="  display: grid;
-">
+<div class="center-div" style="  display: grid;">
   <div style id="styledText">
-    <h6 style="font-weight: bold; "><u>** Welcome to Toonverse Studios!
-        **</u> </h6>
-
-    <p> A WEB3 Art development platform.<br>
-      Our Tokenomics are really simple.
+    <h6 style="font-weight: bold; "><u>** PUT BANNER HERE **</u> </h6>
+    <br>
+    <br><br>
+    <br>
+    <p> Introducing a cutting-edge NFT development platform – ToonVerse Studios
       <br>
-      - Mint a DevilCat
       <br>
-      - Stake your DevilCat to earn TOON
+      Our team is excited to bring you a revolutionary new approach to art ownership and collection.
       <br>
-      - Use TOON to mint future collections.
       <br>
-      - Grow TOON ecosytem by offering entire collections for TOON or ETH.
+      Our Tokenomics are designed to create a seamless user experience. With just a few simple steps, you can become a proud owner of a ToonVerse NFT.
       <br>
-      - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
+      <br>
+      - ToonVerse is an NFT development platform where you can stake your DevilCat to earn TOON cryptocurrency, use TOON to mint future collections, and explore other offerings on the ToonVerse marketplace. 
+      <br>
+      <br>
+      - Join us in growing the ToonVerse ecosystem by offering your own collections for TOON or ETH. Stay tuned for exciting updates as we continue to explore new frontiers in NFT technology.
+      <br>
+      <br>
+      - At ToonVerse, we're committed to providing an unparalleled experience for art collectors and enthusiasts. Join us today and be a part of the future of NFTs.
     </p>
     <h4>
       <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
           href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
           Contract</a></button>
+          <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
+            Rarible</a></button>
       <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
           style="margin: 10px">View
           Opensea</a></button>
-      <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
-          Rarible</a></button>
+      
 
     </h4>
   </div>
@@ -62,10 +67,10 @@
 
   <div class="container" id="text">
     <br>
-    <h6>Coming Up to All Devil Cats Holders!</h6>
-    <p> We have TWO MINTS coming up to DevilCatz holders.<br>
+    <h6>Coming Up to All $TOON Holders</h6>
+    <p> We have TWO upcoming MINTS:<br>
       Ladies and Gentlemen we introduce to you..<br>
-      CrazyCloudzClub.wtFluff and FruitTownGremlins.WtFruit<br>
+      El Gato and Neko Akuma<br>
     </p>
     <br>
     <br>
@@ -87,16 +92,20 @@
 
           <br>
           <br>
-          <img id="gremlins-img" src="../../../assets/toonverse/fruitgremlins.wtf/fruitTownGremlins.gif " alt="logo"
+          <img id="gremlins-img" src="../../../assets/toonverse/Gen1/default.png " alt="logo"
             width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
           <br>
           <br>
           <p>COMING SOON</p>
-          <p> Fruit Town Gremlins
+          <p> EL GATO DIABLO
           </p>
-          <h3>Sold Out</h3>
+          <h3>TBA</h3>
           <br>
-          <p>Free mint only available to DevilCatz Holders.</p>
+          <p>*   MINT WITH $TOON   *
+            <br>
+            Discount to all
+            <br>DevilCat Holders
+          </p>
           <br>
 
         </div>
@@ -105,16 +114,20 @@
         <div id="card-freeMint" style="min-height: 100%;">
           <br> <br>
 
-          <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="95%" height="180vh"
+          <img id="cloudz-img" src="../../../assets/toonverse/Gen1/akuma.jpeg" alt="logo" width="95%" height="180vh"
             style="border-radius: 75%;object-fit: contain;" />
           <br>
           <br>
           <p>COMING SOON</p>
-          <p>Cloudy Frens</p>
-          <h3>Coming Soon</h3>
+          <p> Neko Akuma
+          </p>
+          <h3>TBA</h3>
           <br>
-
-          <p>Free mint only available to DevilCatz Holders.</p>
+          <p>*   MINT WITH $TOON   *
+            <br>
+            Discount to all
+            <br>DevilCat Holders
+          </p>
           <br>
         </div>
       </div>
@@ -153,9 +166,5 @@
 
     </p>
   </div>
-
-
-
-
 
 </div>
