--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -5,18 +5,11 @@
     control the opensea | etherscan | rarible | royalties| etc.
 
 
-
-
-
-
-
-
-
     <div class="container" style="margin-bottom: 100px; margin-top:25px">
         <div class="row"
             style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
-            <div class="col-md-2">Price</div>
-            <div class="col-md-2">Icon</div>
+            <div class="col-md-2">Collection Price</div>
+            <div class="col-md-2"></div>
             <div class="col-md-2">Project</div>
             <div class="col-md-2">Status</div>
             <div class="col-md-2">Supply</div>
@@ -79,8 +72,7 @@
                         style="border-radius: 5%" />
                 </a> -->
                 <p>
-                    <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town
-                        Gremlins</a>
+                    <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town Gremlin</a>
                 </p>
 
             </div>
@@ -101,7 +93,9 @@
                         SOLD OUT
                     </button></a>
 
-            </div>
+                    
+
+           </div>
 
         </div>
 
@@ -111,11 +105,11 @@
                 TDB</div>
             <div class="col-md-2">
 
-                <img src="../../../assets/toonverse/tanggang/tangGang.png" class="rounded-circle" alt=""
+                <img src="../../../assets/toonverse/Gen1/gato.png" class="rounded-circle" alt=""
                     style="width: 45px; height: 45px" />
             </div>
             <div class="col-md-2">
-                <p class="fw-bold mb-1">Tang Gang</p>
+                <p class="fw-bold mb-1">El Gato Diablo</p>
 
             </div>
 
@@ -142,11 +136,11 @@
                 TDB</div>
             <div class="col-md-2">
 
-                <img src="../../../assets/toonverse/clouds/Music.png" class="rounded-circle" alt=""
+                <img src="../../../assets/toonverse/Gen1/akuma.jpeg" class="rounded-circle" alt=""
                     style="width: 45px; height: 45px" />
             </div>
             <div class="col-md-2">
-                <p class="fw-bold mb-1">Crazy Cloud Club</p>
+                <p class="fw-bold mb-1">Neko Akuma</p>
 
             </div>
 
@@ -164,7 +158,7 @@
                 <button disabled [routerLink]="['/manage']" id="styled-mint-button">
                     TBD
                 </button>
-            </div>
+    <!--          </div>
 
         </div>
 
@@ -229,7 +223,7 @@
 
                 <button disabled [routerLink]="['/manage']" id="styled-mint-button">
                     TBD
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
