--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <img src="./../../../assets/toonverse/toonverseLogo.png" alt="logo" width="50" style="border-radius: 50%;" />
         </div>
 
-        <h6 (click)="basicNavbar.toggle()" id="navbar-text">Toonverse Studios!</h6>
+        <h6 (click)="basicNavbar.toggle()" id="navbar-text">Toonverse Studios</h6>
 
       </a>
 
@@ -31,7 +31,7 @@
           </p>
         </li> -->
         <li class="nav-item">
-          <p id="navbar-text" (click)="basicNavbar.toggle()" class="styled" [routerLink]="['/viewcatz']"> LookUp</p>
+          <p id="navbar-text" (click)="basicNavbar.toggle()" class="styled" [routerLink]="['/viewcatz']"> Look Up</p>
         </li>
 
         <li class="nav-item">
