--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -12,13 +12,13 @@
 
         <button class="styled" (click)="toggleViewDevilCatz()">
 
-            Search DevilCatz
+            Search Devil Catz
 
         </button>
         <br><br>
         <button class="styled" style="max-width: fit-content;" (click)="toggleViewFtg()">
 
-            Search FruitTownGremlins.WtFruit
+            Search Fruit Town Gremlins
         </button>
     </div>
     <!--
