--- a/src/app/components/marketplace/marketplace.component.scss
+++ b/src/app/components/marketplace/marketplace.component.scss
@@ -1,24 +1,61 @@
-#styled-mint-button {
-    margin-bottom: 4px;
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: black;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: pink;  
-  }
-  
-  #styled-mint-button:hover {
-    box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-  }
+.center-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25px;
+}
 
-  #table{
-    justify-content: center; padding: 15px;background-color: aliceblue;
-  }
+.title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
-  #table:hover{
-    background-color: bisque;
-  }
+.marketplace-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.marketplace-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: aliceblue;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.marketplace-item:hover {
+  background-color: bisque;
+}
+
+.item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.item-price {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.item-icon {
+  margin-right: 10px;
+}
+
+.project-name {
+  margin-bottom: 0;
+}
+
+.item-status {
+  margin-left: 10px;
+}
+
+.styled-mint-button {
+  margin-bottom: 4px;
+}
