Buttons, styling, fun

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="center-div" style="  display: grid;">
   <div style id="styledText">
-    <h6 style="font-weight: bold; "><u>** PUT BANNER HERE **</u> </h6>
+    <img id="center-img-gif" src="../../../assets/toonverse/multiBanner.png" alt="logo" height="40%" width="63%"
+          style="border-radius: 5%" />
+        <br>
     <br>
     <br><br>
     <br>
@@ -55,7 +57,9 @@
         <br>
         <p>Owning a DevilCatz token entitles you to future collection drops.</p>
 
-        <button id="navbar-text" class="styled">SOLD OUT!</button>
+        <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
+          style="margin: 10px">View
+          SOLD OUT</a></button>
 
       </div>
     </div>
