--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -1,6 +1,6 @@
 <div class="center-div">
   <div class="card-header" style="border-radius: 5%;">
-    <h6 style="font-weight: bold; "><u>**Devil Catz Staking**</u> </h6>
+    <h6 style="font-weight: bold; "><u>Devil Catz Staking</u> </h6>
     <button class="styled" style="margin: 1%;"> <a style="margin: 10%;"
         href="https://etherscan.io/token/0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF#code" style="margin: 10px;">View
         Contract</a></button>
