--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -1,6 +1,6 @@
 <div class="center-div" style=" display: inline list-item;
 ">
-    <h6 style="font-weight: bold; "><u>**ToonVerse Marketplace**</u> </h6>
+    <h6 style="font-weight: bold; "><u>ToonVerse Marketplace</u> </h6>
     The location for future mints and the ability to purchase ownership of entire collections, control the ownership
     control the opensea | etherscan | rarible | royalties| etc.
 
@@ -15,9 +15,11 @@
             <div class="col-md-2">Supply</div>
             <div class="col-md-2">Link</div>
         </div>
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
+
+          
             <div class="col-md-2">
-                Not for sale
+                NFS
             </div>
 
             <div class="col-md-2">
@@ -53,7 +55,7 @@
             </div>
         </div>
 
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
 
             <div class="col-md-2">
                 50 ETH
@@ -99,7 +101,7 @@
 
         </div>
 
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
             <div class="col-md-2">
 
                 TDB</div>
@@ -130,7 +132,7 @@
             </div>
 
         </div>
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
             <div class="col-md-2">
 
                 TDB</div>
