--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -1,7 +1,6 @@
 <div class="center-div" style="display: grid;justify-items: center;margin-bottom: 20%;">
 
-    <h6 style="font-weight: bold; "><u>** View Your ART or Others!
-            **</u> </h6>
+    <h6 style="font-weight: bold; "><u>View Yours, or others ToonVerse Assets</u> </h6>
 
 
 
